<resources>
    <string name="app_name">E-Travel</string>

    <!--Tabs-->
    <string name="sightseeing">Sightseeing</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>

    <string name="title_activity_googlemaps">Map</string>

    <string name="staticComments">Comments:</string>
    <string name="singIn">Sign in</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="user_name">Name</string>

    <string name="snackbar">LOG IN</string>


    <!--Description fragment-->
    <string name="desc">Description:</string>
    <string name="area">Area: </string>
    <string name="km">km2</string>
    <string name="population">Population: </string>
    <string name="mil">mil.</string>


    <string name="cancel">close</string>


    <string name="addComment">Add</string>
    <string name="helloUser">Hello </string>
    <string name="title_activity_gps">Map</string>
    <string name="search">Search</string>
    <string name="title_activity_google_navigation">Map</string>
    <string name="title_activity_gps_navigation">Map</string>


</resources>
