<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="150dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/registration_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/regstration_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin"
        android:hint="@string/user_name"
        android:inputType="text" />


    <Button
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="register"
        android:text="@string/register" />


</LinearLayout>