<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/dialog_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dialog_cityImage0"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:scaleType="centerCrop" />

            <ProgressBar
                android:id="@+id/image_desc_progressBar0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dialog_cityImage1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="2dp"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:scaleType="centerCrop" />

            <ProgressBar
                android:id="@+id/image_desc_progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


            </FrameLayout>
        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/dialog_cityImage2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="2dp"
            android:background="#FFFFFF"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:id="@+id/image_desc_progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/desc"
            android:textColor="@color/colorBlack"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/dialog_city_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />


        <!--AREA-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/area"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_city_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textSize="16sp" />

        </LinearLayout>
        <!--POPULATION-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/population"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dialog_city_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mil"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>